--- a/index3.html
+++ b/index3.html
@@ -21,7 +21,7 @@
                     <td><input type="text" class="form-control"></td>
                 </tr>
                 <tr>
-                    <td>ADDMISSION NO</td>
+                    <td>ADMISSION NO</td>
                     <td><input type="text" class="form-control"></td>
                 </tr>
                 <tr>
@@ -47,6 +47,7 @@
             </div>
             <div class="cols col-12 col-sm-6 col-md-6 col-lg-6">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus, id a doloribus nam sapiente asperiores qui ratione aliquam nulla aliquid animi vitae molestiae quae, porro pariatur magni obcaecati iure.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum commodi aliquam quisquam optio ratione, quo velit eveniet ipsa cumque eos architecto veniam fugiat quibusdam, perferendis aspernatur dolorem at fugit reprehenderit!
             </div>
         </div>
     </div>
